<resources>
    <string name="app_name">AndroidBleKit</string>
    <string name="title_scan_device">Search</string>
    <string name="title_central">Central</string>
    <string name="title_peripheral">Peripheral</string>
    <string name="title_select">Select</string>
    <string name="str_scan">Scan</string>
    <string name="str_advertise">Advertise</string>
    <string name="str_advertise_failed">Advertise failed</string>
    <string name="str_connect">connect</string>
    <string name="str_send">send</string>
    <string name="str_input_msg">Input message</string>
    <string name="str_send_failure">Send failed</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_connection_lost">Connect lost</string>
    <string name="str_connection_failed">Connect failed</string>
    <string name="str_refresh">Refresh</string>
    <string name="str_status">State：</string>
    <string name="str_le_address">Address：</string>
    <string name="str_le_mtu">MTU：</string>
    <string name="str_connected">CONNECTED</string>
    <string name="str_disconnected">DISCONNECTED</string>
    <string name="str_filter_by_name">Filter</string>
    <string name="request_mtu">Request Mtu</string>
    <string name="failure">Failure</string>
    <string name="notice">Notice</string>
    <string name="need_write_store_premission">We need write permission for storage，open now？</string>
    <string name="open">OPEN</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="settings">Settings</string>
    <string name="default_mtu">Default Mtu</string>
    <string name="log_level">Log level</string>
    <string name="global">Global</string>
    <string name="advertise_device_name">Advertise device name</string>
    <string name="not_advertise_device_name">Advertise without device name</string>
    <string name="off">Off</string>
    <string name="on">On</string>

    <string name="key_setting_log_level" translatable="false">key_loglevel</string>
    <string name="key_setting_default_mtu" translatable="false">key_default_mtu</string>
    <string name="key_setting_advertise_device_name" translatable="false">key_advertise_name</string>
</resources>