<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/global">

        <ListPreference
            app:defaultValue="DEBUG"
            app:entries="@array/log_levels"
            app:entryValues="@array/log_levels"
            app:key="@string/key_setting_log_level"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_central">

        <EditTextPreference
            app:defaultValue="512"
            app:key="@string/key_setting_default_mtu"
            app:title="@string/default_mtu"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_peripheral">
        <SwitchPreferenceCompat
            app:key="@string/key_setting_advertise_device_name"
            app:defaultValue="true"
            app:summaryOff="@string/off"
            app:summaryOn="@string/on"
            app:title="@string/advertise_device_name" />

    </PreferenceCategory>

</PreferenceScreen>